[project]
name = "github-repo-summarizer"
version = "0.1.0"
description = "MCP server that generates a PDF summary of a public GitHub repository"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.2.0",
    "ollama>=0.4.0",
    "httpx>=0.27.0",
    "reportlab>=4.0.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
github-repo-summarizer = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["main.py"]
